updated the rows and columns so they are no longer overlapping - fixed the icon problem, but still need to work on centering it, and really just simplified the HTML. Also did pseudo code for moment js to have the text area change depending on the time

--- a/css/style.css
+++ b/css/style.css
@@ -69,12 +69,12 @@ textarea {
 
 .bi {
   align-items: center;
-  font-size: 16px;
+  font-size: 25px;
   color: white;
 }
 
 .saveBtn i:hover {
-  font-size: 20px;
+  font-size: 25px;
   transition: all 0.3s ease-in-out;
   color: black;
 }
